manifests/nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment      
  labels:
    app: nginx              
spec:
  replicas: 2               
  selector:
    matchLabels:
      app: nginx            
  template:
    metadata:
      labels:
        app: nginx          
    spec:
      containers:
      - name: nginx-container # A name for the container inside the pod
        image: nginx:1.25.3   
        ports:
        - containerPort: 80
