manifests/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service        
spec:
  selector:
    app: nginx               # This service will route traffic to any pod with the label "app: nginx"
  ports:
    - protocol: TCP
      port: 80              
      targetPort: 80         
  type: ClusterIP
